fix(grid): remove jitter caused by scrollbar

--- a/projects/angular/components/ui-grid/src/ui-grid.component.scss
+++ b/projects/angular/components/ui-grid/src/ui-grid.component.scss
@@ -446,6 +446,7 @@ ui-grid {
             mat-progress-bar.ui-grid-loader {
                 z-index: 2;
                 position: relative;
+                margin-bottom: -4px !important;
             }
 
             .ui-grid-header {
